messaging_app/messaging_app/green_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app-green
  labels:
    app: django-app
    version: green
spec:
  replicas: 3
  selector:
    matchLabels:
      app: django-app
      version: green
  template:
    metadata:
      labels:
        app: django-app
        version: green
    spec:
      containers:
      - name: django-app
        image: <your-docker-image>:green
        ports:
        - containerPort: 8000
